[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valueiteration"
version = "0.1.0"
maintainers = [
  { name="Charlotte Rigby", email="c.rigby3@lancaster.ac.uk" },
]
authors = [
  { name="Charlotte Rigby", email="c.rigby3@lancaster.ac.uk" },
]
description = "Value iteration algorithm for Markov Decision Processes"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
]

[tool.setuptools]
packages = ["value_iteration_code"]

[project.urls]
homepage = "https://github.com/C-Rigby/value_iteration"
